--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{{url_for('static', filename="flouze.css")}}" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2">
+    <link rel="stylesheet" href="{{url_for('static', filename='flouze.css')}}" type="text/css">
     <style>
     body {
       background-image: url({{url_for('static', filename="images/2.jpg")}});
