--- a/website/templates/Jeu1-choix.html
+++ b/website/templates/Jeu1-choix.html
@@ -2,7 +2,7 @@
 %}
 
 <div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
-<header class="w3-text-white w3-padding medium" style="background-color:{{theme_color}}">
+<header class="w3-text-white w3-padding medium" style="background-color:{{engine.current_game.config["theme_color"][0]}}">
     Combien de tiquets voulez-vous mettre en jeu ?
 </header>
 <form method="POST">
@@ -30,7 +30,7 @@
 <option value="19">19 tickets</option>
 <option value="20">20 tickets</option>
 </select>
-<button type="submit" class="w3-button w3-large" style="background-color:{{theme_color}}" name="boutton" value="jeu1-choix">Valider</button></form>
+<button type="submit" class="w3-button w3-large w3-text-white" style="background-color:{{engine.current_game.config["theme_color"][0]}}" name="boutton" value="jeu1-choix">Valider</button></form>
 </div>
 
 {% endblock %}
