--- a/website/templates/Jeu2-choix.html
+++ b/website/templates/Jeu2-choix.html
@@ -2,20 +2,20 @@
 %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn">
-<header class="w3-text-white medium w3-padding" style="background-color:{{theme_color}}">
+<header class="w3-text-white medium w3-padding" style="background-color:{{engine.current_game.config["theme_color"][0]}}">
     Choisissez un nombre
 </header>
 <form method="POST">
   <div class="w3-margin w3-lobster">
     {% for i in range(5) %}
-      {% if user["choix"] == i+1 %}
+      {% if player.choice == i+1 %}
       <button type="submit" name="boutton" value={{i+1}} class="circle w3-grayscale" style="background-color: #bff5ea;" disabled>{{i+1}}</button>
       {% else %}
       <button type="submit" name="boutton" value={{i+1}} class="circle w3-hover-opacity" style="background-color: #bff5ea;">{{i+1}}</button>
       {% endif %}
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{theme_color}}">Valider</button></p>
+  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{engine.current_game.config["theme_color"][0]}}">Valider</button></p>
   </form>
 </div>
 
