--- a/website/templates/Jeu2-reveal.html
+++ b/website/templates/Jeu2-reveal.html
@@ -6,14 +6,14 @@
     {% for i in range(2) %}
 
     <div class="flip-card" style="width:150px; height:120px;">
-      <div id="card{{i}}" {% if gameState['reveal'][i] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{players[i]['color']}};">
-          <h4><b>{{players[i]["name"]}}</b></h4>
+      <div id="card{{i}}" {% if engine.current_game.current_reveal[i] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
+        <div class="flip-card-front" style="background-color:{{engine.players[i].color}};">
+          <h4><b>{{engine.players[i].name}}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{players[i]['color']}};">
-          <h4><b>{{players[i]["name"]}}</b></h4>
+        <div class="flip-card-back" style="background-color:{{engine.players[i].color}};">
+          <h4><b>{{engine.players[i].name}}</b></h4>
           <div class="w3-display-container" style="height:50px;">
-            <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{players[i]['secColor']}};">{{players[i]["choix"]}}</div>
+            <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{engine.players[i].sec_color}};">{{engine.players[i].choice}}</div>
           </div>
         </div>
       </div>
@@ -25,14 +25,14 @@
 
     {% for i in range(2) %}
     <div class="flip-card" style="width:150px; height:120px;">
-      <div id="card{{i+2}}" {% if gameState['reveal'][i+2] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{players[i+2]['color']}};">
-          <h4><b>{{players[i+2]["name"]}}</b></h4>
+      <div id="card{{i+2}}" {% if engine.current_game.current_reveal[i+2] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
+        <div class="flip-card-front" style="background-color:{{engine.players[i+2].color}};">
+          <h4><b>{{engine.players[i+2].name}}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{players[i+2]['color']}};">
-          <h4><b>{{players[i+2]["name"]}}</b></h4>
+        <div class="flip-card-back" style="background-color:{{engine.players[i+2].color}};">
+          <h4><b>{{engine.players[i+2].name}}</b></h4>
           <div class="w3-display-container" style="height:50px;">
-            <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{players[i+2]['secColor']}};">{{players[i+2]["choix"]}}</div>
+            <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{engine.players[i+2].sec_color}};">{{engine.players[i+2].choice}}</div>
           </div>
         </div>
       </div>
@@ -42,14 +42,14 @@
   </div>
   <div style="display:flex; justify-content:space-around;">
     <div class="flip-card" style="width:150px; height:120px;">
-      <div id="card4" {% if gameState['reveal'][4] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{players[4]['color']}};">
-          <h4><b>{{players[4]["name"]}}</b></h4>
+      <div id="card4" {% if engine.current_game.current_reveal[4] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
+        <div class="flip-card-front" style="background-color:{{engine.players[4].color}};">
+          <h4><b>{{engine.players[4].name}}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{players[4]['color']}};">
-          <h4><b>{{players[4]["name"]}}</b></h4>
+        <div class="flip-card-back" style="background-color:{{engine.players[4].color}};">
+          <h4><b>{{engine.players[4].name}}</b></h4>
           <div class="w3-display-container" style="height:50px;">
-            <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{players[4]['secColor']}};">{{players[4]["choix"]}}</div>
+            <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{engine.players[4].sec_color}};">{{engine.players[4].choice}}</div>
           </div>
         </div>
       </div>
