--- a/website/templates/Jeu4-choix.html
+++ b/website/templates/Jeu4-choix.html
@@ -2,36 +2,36 @@
 %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn contrainte">
-<header class="medium w3-padding" style="background-color:{{theme_color}}">
+<header class="medium w3-padding" style="background-color:{{engine.current_game.config["theme_color"][0]}}">
     Choisissez un prix
 </header>
 <form method="POST">
   <div class="w3-margin" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:12px">
     {% for i in range(5) %}
-      {% if user["choix"] == i %}
-        {% if page['prize'][gameState["game4_bonus"]][i] == "star" %}
+      {% if player.choice == i %}
+        {% if engine.current_game.current_prizes[i] == "star" %}
           {% if i == 3 %}
             <div class="w3-card w3-xlarge w3-padding-small w3-light-gray w3-text-teal" style="white-space:nowrap;"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-card w3-xlarge w3-padding-small w3-light-gray" style="white-space:nowrap;"><i class="fa fa-star"></i></div>
           {% endif %}
         {% else %}
-        <div class="w3-card w3-xlarge w3-padding-small w3-light-gray" style="white-space:nowrap;">{{page['prize'][gameState["game4_bonus"]][i]}} <img src="/static/images/coin.png" style="width:25px" alt="Coin"></div>
+        <div class="w3-card w3-xlarge w3-padding-small w3-light-gray" style="white-space:nowrap;">{{engine.current_game.current_prizes[i]}} <img src="/static/images/coin.png" style="width:25px" alt="Coin"></div>
         {% endif %}
       {% else %}
-        {% if page['prize'][gameState["game4_bonus"]][i] == "star" %}
+        {% if engine.current_game.current_prizes[i] == "star" %}
           {% if i == 3 %}
             <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white w3-text-teal" style="white-space:nowrap;"><i class="fa fa-star"></i></button>
           {% else %}
             <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white" style="white-space:nowrap;"><i class="fa fa-star"></i></button>
           {% endif %}
         {% else %}
-        <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white" style="white-space:nowrap;">{{page['prize'][gameState["game4_bonus"]][i]}} <img src="/static/images/coin.png" style="width:25px" alt="Coin"></button>
+        <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white" style="white-space:nowrap;">{{engine.current_game.current_prizes[i]}} <img src="/static/images/coin.png" style="width:25px" alt="Coin"></button>
         {% endif %}
       {% endif %}
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button w3-large" style="background-color:{{theme_color}}">Valider</button></p>
+  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button w3-large" style="background-color:{{engine.current_game.config["theme_color"][0]}}">Valider</button></p>
 </form>
 </div>
 
