--- a/website/templates/en_attente.html
+++ b/website/templates/en_attente.html
@@ -2,7 +2,7 @@
 
 <div class="w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
   <h5>En attente des autres joueurs</h5>
-  <h4 id="count">{{done}} / 5</h4>
+  <h4 id="count">{{engine.current_game.current_waiting_count}} / 5</h4>
 </div>
 
 {% endblock %}
