--- a/website/templates/faire_un_don.html
+++ b/website/templates/faire_un_don.html
@@ -1,23 +1,23 @@
 {% extends "base+etoiles.html" %} {% block title %}Faire un don{% endblock %} {% block inside2%}
 
   <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
-  <header class="w3-container w3-padding" style="background-color:{{theme_color}}; font-size:22px">
+  <header class="w3-container w3-padding" style="background-color:{{engine.current_game.config["theme_color"][0]}}; font-size:22px">
       Faire un don
   </header>
   <form class="w3-container" method="POST">
   <select name="destinataire" class="w3-select w3-border w3-round-large w3-center" style="width:120px; margin-top:16px; margin-bottom:8px">
     <option value="" disabled="" selected="">Destinataire</option>
-  <option value=0>{{user['otherPlayers'][0]["name"]}}</option>
-  <option value=1>{{user['otherPlayers'][1]["name"]}}</option>
-  <option value=2>{{user['otherPlayers'][2]["name"]}}</option>
-  <option value=3>{{user['otherPlayers'][3]["name"]}}</option>
+  <option value=0>{{player.other_players[0].name}}</option>
+  <option value=1>{{player.other_players[1].name}}</option>
+  <option value=2>{{player.other_players[2].name}}</option>
+  <option value=3>{{player.other_players[3].name}}</option>
   </select>
   <input name="montant" class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" type="number" style="width:120px; display:inline-block;">
   <p>
     <button type="submit" name="boutton" value="en fait non" class="w3-button w3-margin-right w3-red">en fait non</button>
-    <button type="submit" name="boutton" value="envoyer don" class="w3-button" style="background-color:{{theme_color}}">Envoyer</button>
+    <button type="submit" name="boutton" value="envoyer don" class="w3-button" style="background-color:{{engine.current_game.config["theme_color"][0]}}">Envoyer</button>
   </p>
-</form>
+  </form>
   </div>
 
 {% endblock %}
