--- a/website/templates/Jeu4-choix.html
+++ b/website/templates/Jeu4-choix.html
@@ -2,7 +2,7 @@
 %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn contrainte">
-<header class="medium w3-padding" style="background-color:{{engine.current_game.config["theme_color"][0]}}">
+<header class="medium w3-padding" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
     Choisissez un prix
 </header>
 <form method="POST">
@@ -31,7 +31,7 @@
       {% endif %}
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button w3-large" style="background-color:{{engine.current_game.config["theme_color"][0]}}">Valider</button></p>
+  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button w3-large" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">Valider</button></p>
 </form>
 </div>
 
