--- a/website/templates/Jeu5-reveal.html
+++ b/website/templates/Jeu5-reveal.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
 
 <div class="w3-display-middle w3-center w3-text-white animate__animated animate__fadeIn" style="width:500px;">
-  <header class="w3-container" style="background-color:{{engine.current_game.config["theme_color"][0]}}">
+  <header class="w3-container" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
       <h4>{{player['message']}}</h4>
   </header>
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
@@ -36,7 +36,7 @@
   </div>
   <div class="w3-container w3-center">
       <form method="POST">
-        <button type="submit" class="w3-btn w3-xlarge w3-padding" name="boutton" value="nouvelle proposition" style="background-color:{{engine.current_game.config["theme_color"][0]}}">Faire une nouvelle proposition</button>
+        <button type="submit" class="w3-btn w3-xlarge w3-padding" name="boutton" value="nouvelle proposition" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">Faire une nouvelle proposition</button>
       </form>
   </div>
 </div>
