--- a/website/templates/faire_un_don.html
+++ b/website/templates/faire_un_don.html
@@ -1,7 +1,7 @@
 {% extends "base+etoiles.html" %} {% block title %}Faire un don{% endblock %} {% block inside2%}
 
   <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
-  <header class="w3-container w3-padding" style="background-color:{{engine.current_game.config["theme_color"][0]}}; font-size:22px">
+  <header class="w3-container w3-padding" style="background-color:{{engine.current_game.config["theme_colors"][0]}}; font-size:22px">
       Faire un don
   </header>
   <form class="w3-container" method="POST">
@@ -15,7 +15,7 @@
   <input name="montant" class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" type="number" style="width:120px; display:inline-block;">
   <p>
     <button type="submit" name="boutton" value="en fait non" class="w3-button w3-margin-right w3-red">en fait non</button>
-    <button type="submit" name="boutton" value="envoyer don" class="w3-button" style="background-color:{{engine.current_game.config["theme_color"][0]}}">Envoyer</button>
+    <button type="submit" name="boutton" value="envoyer don" class="w3-button" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">Envoyer</button>
   </p>
   </form>
   </div>
