--- a/website/templates/partager.html
+++ b/website/templates/partager.html
@@ -1,7 +1,7 @@
 {% extends "base+etoiles.html" %} {% block title %}Partager{% endblock %} {% block inside2%}
 
   <div class="w3-large w3-card-4 w3-display-middle w3-white w3-center animate__animated animate__fadeIn" style="width:260px;">
-  <header id="total" class="w3-container w3-text-white w3-xlarge w3-padding" style="background-color:{{engine.current_game.config["theme_color"][0]}}">
+  <header id="total" class="w3-container w3-text-white w3-xlarge w3-padding" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
       <img src="{{url_for('static', filename="images/coin.png")}}" style="width:22px" alt="Coin"> &nbsp; à partager
   </header>
   {% if player.last_profit < 0 %}
@@ -19,7 +19,7 @@
     <div class="w3-rest w3-padding" id="rest"></div>
   </div>
     <button type="submit" name="boutton" value="en fait non" class="w3-button w3-red" style="margin:10px">en fait non</button>
-    <button type="submit" name="boutton" value="envoi partager" class="w3-button w3-text-white" style="margin:10px; background-color:{{engine.current_game.config["theme_color"][0]}}">{% if player.last_profit < 0 %}Réclamer{% else %}Envoyer{% endif %}</button>
+    <button type="submit" name="boutton" value="envoi partager" class="w3-button w3-text-white" style="margin:10px; background-color:{{engine.current_game.config["theme_colors"][0]}}">{% if player.last_profit < 0 %}Réclamer{% else %}Envoyer{% endif %}</button>
 </form>
   </div>
 
